Apply StringFormatted recipe - modernize string formatting to Java 21 syntax